--- a/package.json
+++ b/package.json
@@ -1,42 +1,70 @@
 {
-	"scripts": {
-		"build": "webpack --mode production",
-		"build:dev": "webpack --mode development",
-		"watch": "nodemon --watch webpack.config.js --exec 'npm run build:dev -- --watch'",
-		"start": "node ./server.js",
-		"server:dev": "nodemon --watch ./server.js --exec 'npm start'"
-	},
-	"dependencies": {
-		"@fortawesome/fontawesome-svg-core": "^6.2.1",
-		"@fortawesome/free-brands-svg-icons": "^6.2.1",
-		"@fortawesome/free-regular-svg-icons": "^6.2.1",
-		"@fortawesome/free-solid-svg-icons": "^6.2.1",
-		"@fortawesome/react-fontawesome": "^0.2.0",
-		"express": "^4.18.2",
-		"express-session": "^1.17.3",
-		"passport": "^0.6.0",
-		"passport-local": "^1.0.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router": "^6.4.5",
-		"react-router-dom": "^6.4.5"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.20.5",
-		"@babel/preset-env": "^7.20.2",
-		"@babel/preset-react": "^7.18.6",
-		"@types/express": "^4.17.14",
-		"@types/node": "^18.11.13",
-		"@types/react": "^18.0.26",
-		"@types/react-dom": "^18.0.9",
-		"@types/webpack": "^5.28.0",
-		"css-loader": "^6.7.2",
-		"mini-css-extract-plugin": "^2.7.2",
-		"sass": "^1.56.2",
-		"sass-loader": "^13.2.0",
-		"ts-loader": "^9.4.2",
-		"typescript": "^4.9.4",
-		"webpack": "^5.75.0",
-		"webpack-cli": "^5.0.1"
-	}
+  "name": "scratch",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.4",
+    "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.5",
+    "react-router-dom": "^6.4.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@types/babel__core": "^7.20.0",
+    "@types/babel__preset-env": "^7.9.2",
+    "@types/bcrypt": "^10.0.28-alpha",
+    "@types/express": "^4.17.14",
+    "@types/express-session": "^1.17.5",
+    "@types/node": "^18.11.13",
+    "@types/nodemon": "^1.19.2",
+    "@types/passport": "^1.0.11",
+    "@types/passport-local": "^1.0.35",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/webpack": "^5.28.0",
+    "clean-terminal-webpack-plugin": "^3.0.0",
+    "css-loader": "^6.7.2",
+    "esbuild-loader": "^2.21.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "nodemon": "^2.0.20",
+    "sass": "^1.56.2",
+    "sass-loader": "^13.2.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
+    "typesync": "^0.10.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "scripts": {
+    "start": "ts-node src/server.ts",
+    "start:dev": "nodemon",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development",
+    "watch": "npm run build:dev -- --watch",
+    "types": "typesync || pnpm i"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alinco8/main-page.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/alinco8/main-page/issues"
+  },
+  "homepage": "https://github.com/alinco8/main-page#readme"
 }
